--- a/WebUIBlazor/Pages/Connection.razor
+++ b/WebUIBlazor/Pages/Connection.razor
@@ -19,7 +19,7 @@
                         <MudSelectItem Value="115200" />
                         <MudSelectItem Value="250000" />
                     </MudSelect>
-                    <MudInput T="string" Label="Printer Name" @bind-Value="printerName" Variant="Variant.Text" Immediate="true" Style="max-width:160px;" />
+                    <MudTextField T="string" Label="Printer Name" @bind-Value="printerName" Variant="Variant.Text" Immediate="true" Style="max-width:160px;" />
                 </div>
 
                 <MudGrid Class="pt-5">
