--- a/WebUIBlazor/Pages/ControlPanel.razor
+++ b/WebUIBlazor/Pages/ControlPanel.razor
@@ -20,35 +20,59 @@
 <MudGrid Style="width: 100vw;">
 
     @* Interactive Bed -------------------------------------------------------------- *@
-    <MudItem xs="12" md="6" lg="4">
-        <MudPaper Elevation="0">
-            <PlotlyChart style="height: 60vh; width:100%; min-height: 350px"
-                         @bind-Config="Config" @bind-Layout="Layout" @bind-Data="Data" @ref="Chart"
-                         ClickAction="ClickAction" AfterRender="SubscribeEvents" />
-        </MudPaper>
-        <MudContainer Style="display: flex; justify-content: center; align-items: center;">
-            <MudText>X:  <span style="color:limegreen;">@PrinterManagerService.ActivePrinter.Position.XCurrentPosition</span></MudText>
-            <MudText Class="pl-12">Y: <span style="color:limegreen;">@PrinterManagerService.ActivePrinter.Position.YCurrentPosition</span></MudText>
-            <MudText Class="pl-12">Z: <span style="color:limegreen;">@PrinterManagerService.ActivePrinter.Position.ZCurrentPosition</span></MudText>
-        </MudContainer>
+    <MudItem xs="12" sm="12" md="12" lg="6">
+        <MudGrid>
+            <MudItem xs="10" sm="10" md="10" lg="10" Class="pr-0 mr-0">
+                <div style="margin-right:0px; padding-left:0px;">
+                    <PlotlyChart style="height: 60vh; width:100%; min-height: 350px"
+                                 @bind-Config="Config" @bind-Layout="Layout" @bind-Data="Data" @ref="Chart"
+                                 ClickAction="ClickAction" AfterRender="SubscribeEvents" />
+                </div>
+            </MudItem>
+            <MudItem xs="2" sm="2" md="2" lg="2" Class="d-flex align-center pl-0 ml-0">
+                <div style="margin-left:0px; padding-left:0px;">
+                    <MudText Class="py-8 px-0 mx-0">X:<span style="color:limegreen;">@PrinterManagerService.ActivePrinter.Position.XCurrentPosition</span></MudText>
+                    <MudText Class="py-8 px-0 mx-0">Y: <span style="color:limegreen;">@PrinterManagerService.ActivePrinter.Position.YCurrentPosition</span></MudText>
+                    <MudText Class="py-8 px-0 mx-0">Z: <span style="color:limegreen;">@PrinterManagerService.ActivePrinter.Position.ZCurrentPosition</span></MudText>
+                </div>
+            </MudItem>
+        </MudGrid>
     </MudItem>
 
     @* Control Panel -------------------------------------------------------------- *@
-    <MudItem xs="12" md="6" lg="4" Class="px-3">
+    <MudItem xs="12" sm="12" md="12" lg="2" Class="px-3">
         <div Class="py-5">
             <MudContainer MaxWidth="MaxWidth.Small" Class="px-2">
                 <MudStack Row="true" AlignItems="AlignItems.Center" Class="mb-2">
-                    <MudButton Variant="Variant.Text" Color="Color.Primary" @onclick="() => ControlPanelService.AdjustAxis(MovePositions.XMovePos, true, PrinterManagerService.ActivePrinter)">X+</MudButton>
-                    <MudButton Variant="Variant.Text" Color="Color.Primary" @onclick="() => ControlPanelService.AdjustAxis(MovePositions.YMovePos, true, PrinterManagerService.ActivePrinter)">Y+</MudButton>
-                    <MudButton Variant="Variant.Text" Color="Color.Primary" @onclick="() => ControlPanelService.AdjustAxis(MovePositions.ZMovePos, true, PrinterManagerService.ActivePrinter)">Z+</MudButton>
+                    <MudIconButton Class="mt-2" Variant="Variant.Text" OnClick=" () => ControlPanelService.AdjustAxis(MovePositions.XMovePos, true, PrinterManagerService.ActivePrinter)" Size="Size.Small" Color="Color.Tertiary">
+                        <!-- Render the custom SVG file from wwwroot/svg/ -->
+                        <img src="/svg/X+.svg" alt="Custom SVG" style="width:40px; height:30px;" />
+                    </MudIconButton>
+                    <MudIconButton Class="mt-2" Variant="Variant.Text" OnClick="() => ControlPanelService.AdjustAxis(MovePositions.YMovePos, true, PrinterManagerService.ActivePrinter)" Size="Size.Small" Color="Color.Tertiary">
+                        <!-- Render the custom SVG file from wwwroot/svg/ -->
+                        <img src="/svg/Y+.svg" alt="Custom SVG" style="width:40px; height:30px;" />
+                    </MudIconButton>
+                    <MudIconButton Class="mt-2" Variant="Variant.Text" OnClick="() => ControlPanelService.AdjustAxis(MovePositions.ZMovePos, true, PrinterManagerService.ActivePrinter)" Size="Size.Small" Color="Color.Tertiary">
+                        <!-- Render the custom SVG file from wwwroot/svg/ -->
+                        <img src="/svg/Z+.svg" alt="Custom SVG" style="width:40px; height:30px;" />
+                    </MudIconButton>
                     <MudButton Variant="Variant.Text" Color="Color.Primary" @onclick="() => ControlPanelService.BabySteps(0.02, PrinterManagerService.ActivePrinter)">Z +0.02</MudButton>
                     <MudNumericField Margin="MudBlazor.Margin.Dense" Immediate="true" @bind-Value="PrinterManagerService.ActivePrinter.MotionSettings.FeedRateFreeMove" TextUpdateSuppression="false" Label="Set Feedrate" Variant="Variant.Outlined" Min="0" HideSpinButtons="true" />
                 </MudStack>
 
                 <MudStack Row="true" AlignItems="AlignItems.Center" Class="mb-2">
-                    <MudButton Variant="Variant.Text" Color="Color.Primary" @onclick="() => ControlPanelService.AdjustAxis(MovePositions.XMovePos, false, PrinterManagerService.ActivePrinter)">X-</MudButton>
-                    <MudButton Variant="Variant.Text" Color="Color.Primary" @onclick="() => ControlPanelService.AdjustAxis(MovePositions.YMovePos, false, PrinterManagerService.ActivePrinter)">Y-</MudButton>
-                    <MudButton Variant="Variant.Text" Color="Color.Primary" @onclick="() => ControlPanelService.AdjustAxis(MovePositions.ZMovePos, false, PrinterManagerService.ActivePrinter)">Z-</MudButton>
+                    <MudIconButton Class="mt-2" Variant="Variant.Text" OnClick="() => ControlPanelService.AdjustAxis(MovePositions.XMovePos, false, PrinterManagerService.ActivePrinter)" Size="Size.Small" Color="Color.Tertiary">
+                        <!-- Render the custom SVG file from wwwroot/svg/ -->
+                        <img src="/svg/X-.svg" alt="Custom SVG" style="width:40px; height:30px;" />
+                    </MudIconButton>
+                    <MudIconButton Class="mt-2" Variant="Variant.Text" OnClick="() => ControlPanelService.AdjustAxis(MovePositions.YMovePos, false, PrinterManagerService.ActivePrinter)" Size="Size.Small" Color="Color.Tertiary">
+                        <!-- Render the custom SVG file from wwwroot/svg/ -->
+                        <img src="/svg/Y-.svg" alt="Custom SVG" style="width:40px; height:30px;" />
+                    </MudIconButton>
+                    <MudIconButton Class="mt-2" Variant="Variant.Text" OnClick="() => ControlPanelService.AdjustAxis(MovePositions.ZMovePos, false, PrinterManagerService.ActivePrinter)" Size="Size.Small" Color="Color.Tertiary">
+                        <!-- Render the custom SVG file from wwwroot/svg/ -->
+                        <img src="/svg/Z-.svg" alt="Custom SVG" style="width:40px; height:30px;" />
+                    </MudIconButton>
                     <MudButton Variant="Variant.Text" Color="Color.Primary" @onclick="() => ControlPanelService.BabySteps(-0.02, PrinterManagerService.ActivePrinter)">Z -0.02</MudButton>
                     <MudText Typo="Typo.overline"><b>CURRENT FEEDRATE: </b> @(PrinterManagerService.ActivePrinter.MotionSettings.FeedRateFreeMove)(mm/min)</MudText>
                 </MudStack>
@@ -59,7 +83,7 @@
                     <MudChipSet @bind-SelectedChip="Selected" Filter="true" Mandatory="true">
                         <MudChip Text="0.1" Color="Color.Success" Value="@((double)0.1)">0.1 mm</MudChip>
                         <MudChip Text="1" Color="Color.Success" Value="@((double)1)">1 mm</MudChip>
-                        <MudChip Text="10" Color="Color.Success" Value="@((double)10)">10 mm</MudChip>
+                        <MudChip Default="true" Text="10" Color="Color.Success" Value="@((double)10)">10 mm</MudChip>
                         <MudChip Text="100" Color="Color.Success" Value="@((double)100)">100 mm</MudChip>
                     </MudChipSet>
                     @if (Selected != null)
@@ -71,22 +95,47 @@
                     <MudContainer>
                         <MudGrid Spacing="5" Justify="Justify.SpaceBetween">
                             <MudItem xs="4" Class="px-0">
-                                <MudButton Style="white-space: nowrap;" FullWidth="true" Variant="Variant.Text" Color="Color.Primary" @onclick="() => ControlPanelService.AdjustAxis(MovePositions.EMovePos, true, PrinterManagerService.ActivePrinter)">Extrude</MudButton>
-                                <MudButton Style="white-space: nowrap;" FullWidth="true" Variant="Variant.Text" Color="Color.Primary" @onclick="() => ControlPanelService.HomeAxisCommand(PrinterManagerService.ActivePrinter)">HomeAll</MudButton>
+                                <MudIconButton Class="mt-2" Variant="Variant.Text" OnClick="() => ControlPanelService.AdjustAxis(MovePositions.EMovePos, true, PrinterManagerService.ActivePrinter)" Size="Size.Small" Color="Color.Tertiary">
+                                    <!-- Render the custom SVG file from wwwroot/svg/ -->
+                                    <img src="/svg/Extrude.svg" alt="Custom SVG" style="width:40px; height:30px;" />
+                                </MudIconButton>
+                                <MudIconButton Class="mt-2" Variant="Variant.Text" OnClick="() => ControlPanelService.HomeAxisCommand(PrinterManagerService.ActivePrinter)" Color="Color.Tertiary">
+                                    <!-- Render the custom SVG file from wwwroot/svg/ -->
+                                    <img src="/svg/HomeAll.svg" alt="Custom SVG" style="width:40px; height:30px;" />
+                                </MudIconButton>
                             </MudItem>
                             <MudItem xs="4" Class="px-0">
-                                <MudButton Style="white-space: nowrap;" FullWidth="true" Variant="Variant.Text" Color="Color.Primary" @onclick="() => ControlPanelService.AdjustAxis(MovePositions.EMovePos, false, PrinterManagerService.ActivePrinter)">Retract</MudButton>
-                                <MudButton Style="white-space: nowrap;" FullWidth="true" Variant="Variant.Text" Color="Color.Primary" @onclick="() => ControlPanelService.HomeAxisCommand(PrinterManagerService.ActivePrinter, true, true)">HomeXY</MudButton>
+                                <MudIconButton Class="mt-2" Variant="Variant.Text" OnClick="() => ControlPanelService.AdjustAxis(MovePositions.EMovePos, false, PrinterManagerService.ActivePrinter)" Size="Size.Small" Color="Color.Tertiary">
+                                    <!-- Render the custom SVG file from wwwroot/svg/ -->
+                                    <img src="/svg/Retract.svg" alt="Custom SVG" style="width:40px; height:30px;" />
+                                </MudIconButton>
+                                <MudIconButton Class="mt-2" Variant="Variant.Text" OnClick="() => ControlPanelService.HomeAxisCommand(PrinterManagerService.ActivePrinter, true, true)" Size="Size.Small" Color="Color.Tertiary">
+                                    <!-- Render the custom SVG file from wwwroot/svg/ -->
+                                    <img src="/svg/XYHome.svg" alt="Custom SVG" style="width:40px; height:30px;" />
+                                </MudIconButton>
                             </MudItem>
                             <MudItem xs="4" Class="px-0">
-                                <MudButton Style="white-space: nowrap;" FullWidth="true" Variant="Variant.Text" Color="Color.Primary" @onclick="() => ControlPanelService.DisableSteppers(PrinterManagerService.ActivePrinter)">Disable Motors</MudButton>
-                                <MudButton Style="white-space: nowrap;" FullWidth="true" Variant="Variant.Text" Color="Color.Primary" @onclick="() => ControlPanelService.HomeAxisCommand(PrinterManagerService.ActivePrinter, false, false, true)">HomeZ</MudButton>
+                                <MudTooltip Text="Disable Stepper Motors">
+                                    <MudIconButton Class="mt-2" Variant="Variant.Text" OnClick="() => ControlPanelService.DisableSteppers(PrinterManagerService.ActivePrinter)" Size="Size.Small" Color="Color.Tertiary">
+                                        <!-- Render the custom SVG file from wwwroot/svg/ -->
+                                        <img src="/svg/DisableMotors.svg" alt="Custom SVG" style="width:40px; height:30px;" />
+                                    </MudIconButton>
+                                </MudTooltip>
+                                <MudIconButton Class="mt-2" Variant="Variant.Text" OnClick="() => ControlPanelService.HomeAxisCommand(PrinterManagerService.ActivePrinter, false, false, true)" Size="Size.Small" Color="Color.Tertiary">
+                                    <!-- Render the custom SVG file from wwwroot/svg/ -->
+                                    <img src="/svg/ZHome.svg" alt="Custom SVG" style="width:40px; height:30px;" />
+                                </MudIconButton>
                             </MudItem>
                         </MudGrid>
 
                         <MudGrid Spacing="5" Justify="Justify.SpaceBetween">
                             <MudItem xs="12" Class="px-0">
-                                <MudButton Style="white-space: nowrap;" FullWidth="true" Variant="Variant.Text" Color="Color.Primary" @onclick="() => ControlPanelService.ZSteppersAutoAlignment(PrinterManagerService.ActivePrinter)">Align Z</MudButton>
+                                <MudTooltip Text="Z Align">
+                                    <MudIconButton Class="mt-2" Variant="Variant.Text" OnClick="() => ControlPanelService.ZSteppersAutoAlignment(PrinterManagerService.ActivePrinter)" Size="Size.Small" Color="Color.Tertiary">
+                                        <!-- Render the custom SVG file from wwwroot/svg/ -->
+                                        <img src="/svg/AlignZ.svg" alt="Custom SVG" style="width:40px; height:30px;" />
+                                    </MudIconButton>
+                                </MudTooltip>
                             </MudItem>
                         </MudGrid>
                     </MudContainer>
@@ -97,7 +146,7 @@
 
 
     @* Console Output -------------------------------------------------------------- *@
-    <MudItem xs="12" md="12" lg="4">
+    <MudItem xs="12" sm="12" md="12" lg="4">
         <MudPaper Class="d-flex mud-height-full" MaxHeight="800px">
             <textarea id="consoleOutput" style="width:100%; padding:5px; resize: none;" readonly rows="10" cols="50">@ControlPanelService.ConsoleOutput</textarea>
         </MudPaper>
