--- a/WebUIBlazor/Pages/PrintHistory.razor
+++ b/WebUIBlazor/Pages/PrintHistory.razor
@@ -7,8 +7,8 @@
 @inject PrinterManagerService PrinterManager
 @inject NavigationManager MyNavigationManager
 
+<Connection />
 <PrinterState />
-
 <PromptAndNotificationsHandler />
 
 <MudGrid Class="mt-9" Style="width: 100vw;">
