--- a/WebUIBlazor/Pages/BedLevel.razor
+++ b/WebUIBlazor/Pages/BedLevel.razor
@@ -18,7 +18,7 @@
 
 
 <!-- Bed Leveling ---------------------------------------------------------------->
-<MudItem xs="12" md="6" lg="6" Class="pa-0">
+<MudItem xs="12" md="12" lg="12" xl="6" Class="pa-0">
     <!-- Main grid container for the plotly chart and button -->
     <MudGrid Class="pl-6">
         <!-- Grid item containing the Plotly chart -->
