--- a/WebUIBlazor/Pages/PrinterState.razor
+++ b/WebUIBlazor/Pages/PrinterState.razor
@@ -33,7 +33,7 @@
 </MudAlert>
 
 <MudAlert ContentAlignment="HorizontalAlignment.Center" NoIcon="true" Severity="Severity.Success">
-    <MudText Typo="Typo.h6" Color="Color.Primary">@printerManager.Notification</MudText>
+    <MudText Typo="Typo.h6" Color="Color.Primary">@printerManager.NotificationParsedFromAction</MudText>
     <MudText Typo="Typo.h6" Color="Color.Error">@printerManager.UnknownCommandMessage</MudText>
 </MudAlert>
 
