--- a/WebUIBlazor/Pages/Test.razor
+++ b/WebUIBlazor/Pages/Test.razor
@@ -1,60 +1,33 @@
 ﻿@page "/test"
 
-
-<MudIconButton Class="mt-2" Variant="Variant.Text" OnClick="Nothing" Size="Size.Small" Color="Color.Tertiary">
-    <!-- Render the custom SVG file from wwwroot/svg/ -->
-    <img src="/svg/X+.svg" alt="Custom SVG" style="width:40px; height:30px;" />
-</MudIconButton>
-<MudIconButton Class="mt-2" Variant="Variant.Text" OnClick="Nothing" Size="Size.Small" Color="Color.Tertiary">
-    <!-- Render the custom SVG file from wwwroot/svg/ -->
-    <img src="/svg/Y+.svg" alt="Custom SVG" style="width:40px; height:30px;" />
-</MudIconButton>
-<MudIconButton Class="mt-2" Variant="Variant.Text" OnClick="Nothing" Size="Size.Small" Color="Color.Tertiary">
-    <!-- Render the custom SVG file from wwwroot/svg/ -->
-    <img src="/svg/Z+.svg" alt="Custom SVG" style="width:40px; height:30px;" />
-</MudIconButton>
-<MudIconButton Class="mt-2" Variant="Variant.Text" OnClick="Nothing" Size="Size.Small" Color="Color.Tertiary">
-    <!-- Render the custom SVG file from wwwroot/svg/ -->
-    <img src="/svg/X-.svg" alt="Custom SVG" style="width:40px; height:30px;" />
-</MudIconButton>
-<MudIconButton Class="mt-2" Variant="Variant.Text" OnClick="Nothing" Size="Size.Small" Color="Color.Tertiary">
-    <!-- Render the custom SVG file from wwwroot/svg/ -->
-    <img src="/svg/Y-.svg" alt="Custom SVG" style="width:40px; height:30px;" />
-</MudIconButton>
-<MudIconButton Class="mt-2" Variant="Variant.Text" OnClick="Nothing" Size="Size.Small" Color="Color.Tertiary">
-    <!-- Render the custom SVG file from wwwroot/svg/ -->
-    <img src="/svg/Z-.svg" alt="Custom SVG" style="width:40px; height:30px;" />
-</MudIconButton>
-<MudIconButton Class="mt-2" Variant="Variant.Text" OnClick="Nothing" Size="Size.Small" Color="Color.Tertiary">
-    <!-- Render the custom SVG file from wwwroot/svg/ -->
-    <img src="/svg/XYHome.svg" alt="Custom SVG" style="width:40px; height:30px;" />
-</MudIconButton>
-<MudIconButton Class="mt-2" Variant="Variant.Text" OnClick="Nothing" Size="Size.Small" Color="Color.Tertiary">
-    <!-- Render the custom SVG file from wwwroot/svg/ -->
-    <img src="/svg/ZHome.svg" alt="Custom SVG" style="width:40px; height:30px;" />
-</MudIconButton>
-<MudIconButton Class="mt-2" Variant="Variant.Text" OnClick="Nothing" Size="Size.Small" Color="Color.Tertiary">
-    <!-- Render the custom SVG file from wwwroot/svg/ -->
-    <img src="/svg/Extrude.svg" alt="Custom SVG" style="width:40px; height:30px;" />
-</MudIconButton>
-<MudIconButton Class="mt-2" Variant="Variant.Text" OnClick="Nothing" Size="Size.Small" Color="Color.Tertiary">
-    <!-- Render the custom SVG file from wwwroot/svg/ -->
-    <img src="/svg/Retract.svg" alt="Custom SVG" style="width:40px; height:30px;" />
-</MudIconButton>
-<MudIconButton Class="mt-2" Variant="Variant.Text" OnClick="Nothing" Size="Size.Small" Color="Color.Tertiary">
-    <!-- Render the custom SVG file from wwwroot/svg/ -->
-    <img src="/svg/RetractViolet.svg" alt="Custom SVG" style="width:40px; height:30px;" />
-</MudIconButton>
-<MudIconButton Class="mt-2" Variant="Variant.Text" OnClick="Nothing" Size="Size.Small" Color="Color.Tertiary">
-    <!-- Render the custom SVG file from wwwroot/svg/ -->
-    <img src="/svg/AlignZ.svg" alt="Custom SVG" style="width:40px; height:30px;" />
-</MudIconButton>
-<MudIconButton Class="mt-2" Variant="Variant.Text" OnClick="Nothing" Size="Size.Small" Color="Color.Tertiary">
-    <!-- Render the custom SVG file from wwwroot/svg/ -->
-    <img src="/svg/DisableMotors.svg" alt="Custom SVG" style="width:40px; height:30px;" />
-</MudIconButton>
-
-
+<MudMenu Class="" Label="A menu with tooltip" Variant="Variant.Filled" Color="Color.Primary">
+    <div class="d-flex align-center">
+        <MudText Class="ml-4">1</MudText>
+        <MudTooltip Text="1 is good option">
+            <MudIconButton Class="mx-2" Icon="@Icons.Material.Outlined.Info" />
+        </MudTooltip>
+    </div>
+    <div class="d-flex align-center">
+        <MudText Class="ml-4">2</MudText>
+        <MudMenu Icon="@Icons.Material.Outlined.Mouse" ActivationEvent="@MouseEvent.MouseOver" Class="mx-2">
+            <ChildContent>
+                <MudMenuItem>Profile</MudMenuItem>
+                <MudMenuItem>Theme</MudMenuItem>
+                <MudMenuItem>Usage</MudMenuItem>
+                <MudMenuItem>Sign Out</MudMenuItem>
+            </ChildContent>
+        </MudMenu>
+        <MudTooltip Text="2 can be a better option">
+            <MudIconButton Class="mx-2" Icon="@Icons.Material.Outlined.Info" />
+        </MudTooltip>
+    </div>
+    <div class="d-flex align-center">
+        <MudText Class="ml-4">3</MudText>
+        <MudTooltip Text="3 is one more than 2">
+            <MudIconButton Class="mx-2" Icon="@Icons.Material.Outlined.Info" />
+        </MudTooltip>
+    </div>
+</MudMenu>
 @code {
 
     private void Nothing()
