fixed minor bugs on the ui

--- a/WebUIBlazor/Pages/PrintHistory.razor
+++ b/WebUIBlazor/Pages/PrintHistory.razor
@@ -12,7 +12,7 @@
 <PromptAndNotificationsHandler />
 
 <MudGrid Class="mt-9" Style="width: 100vw;">
-    <MudItem xl="6">
+    <MudItem xs="12" sm="12" md="7" lg="6" xl="6">
         <div style="text-align:center;">
             <!-- Add this div with text-align style -->
             <MudText Typo="Typo.h4" Color="Color.Primary" Align="Align.Center" Class="pb-10">Print History</MudText>
@@ -52,7 +52,7 @@
             </div>
         }
     </MudItem>
-    <MudItem xl="6">
+    <MudItem xs="12" sm="12" md="5" lg="6" xl="6">
         <div style="text-align:center;">
             <!-- Add this div with text-align style -->
             <MudText Typo="Typo.h4" Color="Color.Primary" Align="Align.Center" Class="pb-10">Print Alltime Stats</MudText>
