--- a/WebUIBlazor/Pages/PrinterState.razor
+++ b/WebUIBlazor/Pages/PrinterState.razor
@@ -24,13 +24,16 @@
 
 }
 
-<MudAlert ContentAlignment="HorizontalAlignment.Center" Severity="@(!printerManager.ActivePrinter.IsBusy ? Severity.Success : Severity.Warning)" Variant="Variant.Text">
-    @if (printerManager.ActivePrinter.IsBusy)
-    {
-        <MudProgressLinear Striped="true" Color="Color.Primary" Indeterminate="true" Size="Size.Small" />
-    }
-    @(new MarkupString(!printerManager.ActivePrinter.IsBusy ? $"Printer is ready" : "Printer Busy... Please wait"))
-</MudAlert>
+@if (printerManager.ActivePrinter.SerialConnection.IsConnected)
+{
+    <MudAlert ContentAlignment="HorizontalAlignment.Center" Severity="@(!printerManager.ActivePrinter.IsBusy ? Severity.Success : Severity.Warning)" Variant="Variant.Text">
+        @if (printerManager.ActivePrinter.IsBusy)
+        {
+            <MudProgressLinear Striped="true" Color="Color.Primary" Indeterminate="true" Size="Size.Small" />
+        }
+        @(new MarkupString(!printerManager.ActivePrinter.IsBusy ? $"Printer is ready" : "Printer Busy... Please wait"))
+    </MudAlert>
+}
 
 <MudAlert ContentAlignment="HorizontalAlignment.Center" NoIcon="true" Severity="Severity.Success">
     <MudText Typo="Typo.h6" Color="Color.Primary">@printerManager.NotificationParsedFromAction</MudText>
