--- a/WebUIBlazor/Pages/Connection.razor
+++ b/WebUIBlazor/Pages/Connection.razor
@@ -11,26 +11,30 @@
         <MudPopover Open="_expanded">
             <MudPaper>
                 <div style="display: flex; gap: 16px; padding: 0px 56px;">
-                    <MudSelect T="string" Label="Select Port" @bind-Value="portName" Immediate="true" Variant="Variant.Text" Style="max-width:160px;">
-                        @foreach (var template in PrinterManager.PrinterSerialConnection.AvailableConnections())
+                    <MudSelect T="string" Label="Select Port" @bind-Value="PortName" Immediate="true" Variant="Variant.Text" Style="max-width:160px;">
+                        @foreach (var template in Ports)
                         {
                             <MudSelectItem Value=@template />
                         }
                     </MudSelect>
-                    <MudSelect T="int" Label="Select Baudrate" @bind-Value="baudRate" Variant="Variant.Text" Immediate="true" Style="max-width:160px;">
+                    <MudSelect T="int" Label="Select Baudrate" @bind-Value="BaudRate" Variant="Variant.Text" Immediate="true" Style="max-width:160px;">
                         <MudSelectItem Value="115200" />
                         <MudSelectItem Value="250000" />
                     </MudSelect>
-                    <MudTextField T="string" Label="Printer Name" @bind-Value="printerName" Variant="Variant.Text" Immediate="true" Style="max-width:160px;" />
+                    <MudTextField T="string" Label="Printer Name" @bind-Value="PrinterName" Variant="Variant.Text" Immediate="true" Style="max-width:160px;" />
                 </div>
 
                 <MudGrid Class="pt-5">
+                    @foreach (var bs in PrinterManager.Printers.Values)
+                    {
+                        ConnectionState = bs.SerialConnection.IsConnected;
+                    }
                     <MudItem Class="mr-0 pr-0" xs="12" sm="4" md="4" lg="4">
-                        <MudButton Disabled="@(PrinterManager.Printers.ContainsKey(portName) ? true : false )" FullWidth="true" Variant="Variant.Text" Color="Color.Tertiary" @onclick="() => {ConnectionConfiguration(); OnExpandCollapseClick();}">Connect</MudButton>
+                        <MudButton Disabled="ConnectionState" FullWidth="true" Variant="Variant.Text" Color="Color.Tertiary" @onclick="() => {ConnectionConfiguration(); OnExpandCollapseClick();}">Connect</MudButton>
                     </MudItem>
 
                     <MudItem Class="mx-0 px-0" xs="12" sm="4" md="4" lg="4">
-                        <MudButton Disabled="@(PrinterManager.Printers.ContainsKey(portName) ? false : true )" FullWidth="true" Variant="Variant.Text" Color="Color.Error" @onclick="() => {Disconnect(); OnExpandCollapseClick();}"> Disconnect</MudButton>
+                        <MudButton Disabled="!ConnectionState" FullWidth="true" Variant="Variant.Text" Color="Color.Error" @onclick="() => {Disconnect(); OnExpandCollapseClick();}"> Disconnect</MudButton>
                     </MudItem>
 
                     <MudItem Class="ml-0 pl-0" xs="12" sm="4" md="4" lg="4">
@@ -46,11 +50,12 @@
 
 @code {
 
-    string portName { get; set; } = "";
-    string printerName { get; set; }
-    int baudRate { get; set; } = 115200;
-
-    bool _expanded = false;
+    private string PortName { get; set; } = "";
+    private string PrinterName { get; set; }
+    private int BaudRate { get; set; } = 115200;
+    private List<string> Ports { get; set; } = new List<string>();
+    private bool ConnectionState { get; set; }
+    private bool _expanded = false;
 
     private void OnExpandCollapseClick()
     {
@@ -67,18 +72,18 @@
         try
         {
 
-            PrinterManager.AddPrinter(portName, baudRate, printerName);
+            PrinterManager.AddPrinter(PortName, BaudRate, PrinterName);
 
-            if (printerName == null)
+            if (PrinterName == null)
             {
-                printerName = portName;
+                PrinterName = PortName;
             }
 
-            Snackbar.Add($"Printer {printerName} connected", Severity.Success);
+            Snackbar.Add($"Printer {PrinterName} connected", Severity.Success);
 
             await Task.Delay(1000);
 
-            PrinterManager.SelectPrinter(portName);
+            PrinterManager.SelectPrinter(PortName);
 
             //set the host keep alive command to 1 second after connection
             PrinterManager.ActivePrinter.SerialConnection.Write("M113 S1");
@@ -104,20 +109,30 @@
 
     public void Disconnect()
     {
-        PrinterManager.Printers[portName].SerialConnection.Disconnect();
-        PrinterManager.Printers.Remove(portName);
-        Console.WriteLine($"Disconecting port{portName}");
-        Snackbar.Add($"{portName} disconnected", Severity.Error);
+        PrinterManager.Printers[PortName].SerialConnection.Disconnect();
+        PrinterManager.Printers.Remove(PortName);
+        Console.WriteLine($"Disconecting port {PortName}");
+        Snackbar.Add($"{PortName} disconnected", Severity.Error);
+        ConnectionState = !ConnectionState;
     }
 
     public void GetPorts()
     {
         if (PrinterManager.PrinterSerialConnection != null)
         {
-            var ports = PrinterManager.PrinterSerialConnection.AvailableConnections();
-            if (ports.Any())
+
+            var availablePorts = PrinterManager.PrinterSerialConnection.AvailableConnections();
+
+            foreach (var port in availablePorts)
             {
-                portName = ports.First();
+                if (!Ports.Contains(port))
+                    Ports.Add(port);
+            }
+
+            if (Ports.Any())
+            {
+
+                PortName = Ports.First();
             }
         }
     }
